--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -37,7 +37,7 @@
           <div class="footer-pad">
             <h4>How to's</h4>
             <ul class="list-unstyled">
-                <li><a href="#">How to use this app</a></li>
+                <li><a [routerLink]="['/non-secure/how-to-use']">How to use this app</a></li>
                 <li><a href="#">How to get setup</a></li> 
               <li>
                 <a href="#"></a>
