styling and other changes

--- a/src/app/non-secure/privacy-policy/privacy-policy.component.html
+++ b/src/app/non-secure/privacy-policy/privacy-policy.component.html
@@ -25,6 +25,13 @@
                                     While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to your name ("Personal Information").
                                     </p>
                             </li>
+                            <li class="event" data-date="Section 1">
+                                <h3>Information Removal or Retrival</h3>
+                                <p>
+                                    Personal data collected by Skrimish can be a requested for or can be delted. Please conatact us through our contact form to get data not show in site.
+                                    You have an option to delete your account from the security tab on your profile page.
+                                    </p>
+                            </li>
                             <li class="event" data-date="Section 2">
                                 <h3>Log Data</h3>
                                 <p>Like many site operators, we collect information that your browser sends whenever you visit our Site ("Log Data").
