--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -249,6 +249,12 @@
 
               <button [disabled]="uidEntry.invalid"  type="submit" (click)="onSubmitPairRfid()"
                 class="btn btn-primary cust_skir_signup"> Pair RFID to your account</button>
+                <div *ngIf="rfidConnected" class="alert alert-primary" role="alert">
+                   Wristband registered to your profile
+                </div>
+                <div *ngIf="rfidConnected == false" class="alert alert-danger" role="alert">
+                  Registration of wristband to profile failed 
+                </div>
             </div>
 
 
@@ -264,51 +270,79 @@
             <div class="row justify-content-md-center">
               <!-- <div class="col-8"> -->
               <div class="login-screen">
-                <form [formGroup]="passReset" autocomplete="off" method="POST">
-                  <div class="col-6">
-                    <h3 class="center-cust">Enter a new password and confirm password to change your password</h3>
-                    <div class="form-group">
-                      <input formControlName="pass" type="password" class="form-control" placeholder="Password">
-                    </div>
-                    <div *ngIf="pass.invalid && (pass.dirty || pass.touched) " class="alert alert-danger ">
-                      <div *ngIf="pass.errors?.required ">
-                        Password is required
+               
+
+
+                  <accordion>
+
+                    <accordion-group heading="Reset Password">
+                      <form [formGroup]="passReset" autocomplete="off" method="POST">
+                        <div class="col-6">
+                          <h3 class="center-cust">Enter a new password and confirm password to change your password</h3>
+                          <div class="form-group">
+                            <input formControlName="pass" type="password" class="form-control" placeholder="Password">
+                          </div>
+                          <div *ngIf="pass.invalid && (pass.dirty || pass.touched) " class="alert alert-danger ">
+                            <div *ngIf="pass.errors?.required ">
+                              Password is required
+                            </div>
+                            <div *ngIf="pass.errors?.minlength ">
+                              Password needs to be min of 6 characters
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-6">
+                          <div class="form-group">
+                            <input formControlName="confirmPass" type="password" class="form-control"
+                              placeholder="Confirm Password">
+                          </div>
+                          <div *ngIf="confirmPass.invalid && (confirmPass.dirty || confirmPass.touched) "
+                            class="alert alert-danger ">
+                            <div *ngIf="confirmPass.errors?.required ">
+                              Confirm password is required
+                            </div>
+                            <div *ngIf="confirmPass.errors?.notSame">
+                              Passwords needs to match
+                            </div>
+                          </div>
+                        </div>
+                      </form>
+                      <div>
+                        <div *ngIf="passResetPassed" class="alert alert-primary d-none center-cust">
+                          Your password is changed<br>
+                          <a [routerLink]="['/auth/login']">LOGIN</a>.
+                        </div>
+                        <div *ngIf="passResetFailed" class="alert alert-danger d-none center-cust">
+                          We are sorry we were not able to change your password at this time <br>
+                          Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
+                            contact us page</a>
+                        </div>
                       </div>
-                      <div *ngIf="pass.errors?.minlength ">
-                        Password needs to be min of 6 characters
+                      <button [disabled]="passReset.invalid" (click)="onPasswordReset()" type="submit"
+                        class="btn btn-primary cust_skir_signup"> Reset Password</button>
+                    </accordion-group>
+                    <accordion-group heading="Delete Account">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" (click)="deleteCheckboxClicked()" id="flexCheckDefault">
+                        <label class="alert alert-danger form-check-label" for="flexCheckDefault">
+                          ONLY CHECK THE CHECK BOX IF YOU WOULD LIKE TO DELETE YOUR ACCOUNT AND REMOVE ALL YOUR DATA FROM SKIRMESH
+                        </label>
+                        <button (click)="deleteSkirmeshAccount()" class="btn btn-danger" [disabled]="!deleteAccount" > DELETE ACCOUNT!</button>
+                        <div *ngIf="deleteUserFailed" class="alert alert-danger d-none center-cust">
+                          We are sorry we were not able to delete your account at this time <br>
+                          Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
+                            contact us page</a>
+                        </div>
                       </div>
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="form-group">
-                      <input formControlName="confirmPass" type="password" class="form-control"
-                        placeholder="Confirm Password">
-                    </div>
-                    <div *ngIf="confirmPass.invalid && (confirmPass.dirty || confirmPass.touched) "
-                      class="alert alert-danger ">
-                      <div *ngIf="confirmPass.errors?.required ">
-                        Confirm password is required
-                      </div>
-                      <div *ngIf="confirmPass.errors?.notSame">
-                        Passwords needs to match
-                      </div>
-                    </div>
-                  </div>
-                </form>
-                <div>
-                  <div id="FBuserCreatedMessage" class="alert alert-primary d-none center-cust">
-                    Your password is changed<br>
-                    <a [routerLink]="['/auth/login']">LOGIN</a>.
-                  </div>
-                  <div id="FBuserCreatFaileddMessage" class="alert alert-danger d-none center-cust">
-                    We are sorry we were not able to change your password at this time <br>
-                    Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from our
-                      contact us page</a>
-                  </div>
-                </div>
-                <button [disabled]="passReset.invalid" (click)="onPasswordReset()" type="submit"
-                  class="btn btn-primary cust_skir_signup"> Reset Password</button>
+                    </accordion-group>
+    
+                    </accordion>
               </div>
+
+            
+             
+
+
             </div>
             <!-- </div> -->
           </div>
