--- a/src/app/non-secure/privacy-policy/privacy-policy.component.html
+++ b/src/app/non-secure/privacy-policy/privacy-policy.component.html
@@ -28,7 +28,7 @@
                             <li class="event" data-date="Section 1">
                                 <h3>Information Removal or Retrival</h3>
                                 <p>
-                                    Personal data collected by Skrimish can be a requested for or can be delted. Please conatact us through our contact form to get data not show in site.
+                                    Personal data collected by Skrimish can be a requested for or can be delted. Please contact us through our contact form to get data not shown in site.
                                     You have an option to delete your account from the security tab on your profile page.
                                     </p>
                             </li>
