fix map styling on home page

--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -40,7 +40,7 @@
                         and territorial boundaries.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  style="max-height: 500px; width: 100%;" src="../../../assets/images/ballahack_territory.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  style="max-height: 500px;" src="../../../assets/images/ballahack_territory.png" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"/>
 
       </div>
     </div>
