--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -1,28 +1,32 @@
 <div class="row center-cust">
     <div class="card col-4">
         <div class="card-header no-border">
-            <h5 class="card-title">Player Section</h5>
+            <h5 class="card-title">Players</h5>
         </div>
         <div class="card-body pt-0">
-            <h5>Find or bring fields running the Skrimish system.</h5>
-            <p>1) Register for a profile </p>
-            <p>2) Buy an RFID wristband</p>
-            <p>3) Connect RFID wristband to profile</p>
-            <p>4) Play games at Skrimish enabled fields to collects stats</p>
-            <p>5) View and share stats</p>
+
+          <ol type="1">
+            <li> Register a profile. </li>
+            <li> Buy a Skirmesh approved wristband. </li>
+            <li> Connect your RFID wristband to your profile. </li>
+            <li> Play games at Skrimish enabled fields to collect stats. </li>
+            <li> View and share stats. </li>
+          </ol>
+
         </div>
     </div>
     <div class="card col-4">
         <div class="card-header no-border">
-            <h5 class="card-title">Field Section</h5>
+            <h5 class="card-title">Fields</h5>
         </div>
-        <div class="card-body pt-0"> 
-            <h5>Reach out to Skrimish to outfit your field The follow below steps.</h5>
-            <p>1) Turn On devices</p>
-            <p>2) Configure Game Modes in your profile</p>
-            <p>3) Start Game </p> 
-            <p>4) Manage game </p>
-             <p>5) View and share stats</p>
+        <div class="card-body pt-0">
+          <ol type="1">
+            <li> Reach out to Skrimish to outfit your field. </li>
+            <li> Configure Game in your profile. </li>
+            <li> Start Games. </li>
+            <li> Promote live games. </li>
+            <li> View and share stats. </li>
+          </ol>
         </div>
     </div>
 </div>
