Home page updates

--- a/src/app/non-secure/home/home.component.html
+++ b/src/app/non-secure/home/home.component.html
@@ -29,7 +29,7 @@
     <!-- START THE FEATURETTES -->
 
     <hr class="featurette-divider">
-    <h1 class="center-cust"> The Features</h1>
+    <h1 class="center-cust"> The Rundown</h1>
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-7">
@@ -51,7 +51,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Custom Game Configurations</h2>
         <p class="lead"> Each device is capable of operating in a variety of modes,
-                         which can be altered in live games to shift the battle to
+                         which can be altered in live games to shift the battle and
                          keep all players engaged. Reconfigure on the fly or run static
                          scenarios back to back to challenge assaulting teams with
                          competitive time trials - it's completely up to you and there
