--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -7,9 +7,9 @@
 
           <ol type="1">
             <li> Register a profile. </li>
-            <li> Buy a Skirmesh approved wristband. </li>
-            <li> Connect your RFID wristband to your profile. </li>
-            <li> Play games at Skrimish enabled fields to collect stats. </li>
+            <li> Buy an approved wristband. </li>
+            <li> Connect your wristband. </li>
+            <li> Play at equipped fields. </li>
             <li> View and share stats. </li>
           </ol>
 
@@ -21,8 +21,8 @@
         </div>
         <div class="card-body pt-0">
           <ol type="1">
-            <li> Reach out to Skrimish to outfit your field. </li>
-            <li> Configure Game in your profile. </li>
+            <li> Reach out to us for setup. </li>
+            <li> Configure Games. </li>
             <li> Start Games. </li>
             <li> Promote live games. </li>
             <li> View and share stats. </li>
