--- a/src/app/non-secure/how-to-use/how-to-use.component.scss
+++ b/src/app/non-secure/how-to-use/how-to-use.component.scss
@@ -1,6 +1,12 @@
 li {
   margin: 0.5rem 0 0.5rem 0;
 }
+
 .center-cust{
     justify-content: center;
+}
+
+.card {
+  padding: 1rem;
+  margin: 1rem;
 }
