--- a/src/app/non-secure/privacy-policy/privacy-policy.component.html
+++ b/src/app/non-secure/privacy-policy/privacy-policy.component.html
@@ -8,13 +8,13 @@
                         <p>
 
                             Last updated: March 2021 <br>
-                            
+
                             Skirmesh ("us", "we", or "our") operates http://www.skirmesh.net (the "Site"). This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site.
-                            
+
                             We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.
-                            
+
                             Information Collection And Use
-                            
+
                             While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to your name ("Personal Information").
                             </p>
                     <div id="content">
@@ -28,8 +28,8 @@
                             <li class="event" data-date="Section 1">
                                 <h3>Information Removal or Retrival</h3>
                                 <p>
-                                    Personal data collected by Skrimish can be a requested for or can be delted. Please contact us through our contact form to get data not shown in site.
-                                    You have an option to delete your account from the security tab on your profile page.
+                                    Personal data collected by Skrimish can be requested or deleted. Please contact us through our contact form to get data not shown within the site.
+                                    You have the option to delete your account from the security tab on your profile page.
                                     </p>
                             </li>
                             <li class="event" data-date="Section 2">
@@ -37,7 +37,7 @@
                                 <p>Like many site operators, we collect information that your browser sends whenever you visit our Site ("Log Data").
 
                                     This Log Data may include information such as your computer's Internet Protocol ("IP") address, browser type, browser version, the pages of our Site that you visit, the time and date of your visit, the time spent on those pages and other statistics.
-                                    
+
                                     In addition, we may use third party services such as Google Analytics that collect, monitor and analyze this data.</p>
                             </li>
                             <li class="event" data-date="Section 3">
@@ -65,7 +65,7 @@
                                     This Privacy Policy is effective as of March 2021 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.
 
                                     We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.
-                                    
+
                                     If we make any material changes to this Privacy Policy, we will notify you either through the email address you have provided us, or by placing a prominent notice on our website.
                                     </p>
                             </li>
@@ -81,4 +81,3 @@
             </div>
         </div>
     </div>
-
