--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -17,9 +17,8 @@
 						</ul>
 						<br>
 						<form [formGroup]="login" autocomplete="off" method="POST">
-							<div class="form-group input-group">
-								<span class="input-group-addon"><i class="fa fa-user"></i></span>
-								<input id="callSign" formControlName="callSign" type="text" class="form-control"
+							<div id="callSign" class="form-group input-group"> 
+								<input formControlName="callSign" type="text" class="form-control"
 									placeholder="Callsign">
 								<div *ngIf="callSign.invalid && (callSign.dirty || callSign.touched) "
 									class="alert alert-danger ">
@@ -28,9 +27,8 @@
 									</div>
 								</div>
 							</div>
-							<div class="form-group input-group ">
-								<span class="input-group-addon"><i class="fa fa-user"></i></span>
-								<input id="fieldName" style="display: none;" formControlName="fieldName" type="text"
+							<div  id="fieldName" class="form-group input-group "> 
+								<input style="display: none;" formControlName="fieldName" type="text"
 									class="form-control" placeholder="Field Name">
 								<div *ngIf="fieldName.invalid && (fieldName.dirty || fieldName.touched) "
 									class="alert alert-danger ">
@@ -39,8 +37,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="form-group input-group">
-								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+							<div class="form-group input-group"> 
 								<input formControlName="password" type="password" class="form-control"
 									placeholder="Password">
 								<div *ngIf="password.invalid && (password.dirty || password.touched) "
@@ -81,12 +78,12 @@
 									<!-- <div class="top-50 start-50"> -->
 									<div (click)="loginWithFacebook()" class="col-xs-4">
 										<a class="btn btn-lg btn-block social_icon"> 
-											<i class="fa fa-facebook-official">Facebook</i>
+											<i class="fa fa-facebook-official"> </i>
 										</a>
 									</div>
 									<div (click)="signInWithGoogle()" class="col-xs-4">
 										<a class="btn btn-lg btn-block social_icon">
-											<i class="fa fa-google-plus">Google</i>
+											<i class="fa fa-google-plus"> </i>
 										</a>
 									</div>
 								<!-- </div> -->
