header and footer setup

--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -36,7 +36,8 @@
           <div class="footer-pad">
             <h4>How to's</h4>
             <ul class="list-unstyled">
-                <li><a [routerLink]="['/non-secure/how-to-use']">How to use this app</a></li> 
+              <li><a href="../../../assets/docs/FieldFlyer.pdf" download="BuyingGuide.pdf">Field Buying Guide</a></li> 
+                <li><a href="../../../assets/docs/Skirmesh Quick Start Guide.pdf" download="QuickStart.pdf">Field User Guide</a></li> 
               <li>
                 <a href="#"></a>
               </li>
