--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" id="nav_home" [routerLink]="['/non-secure/home']">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="nav_featureList" [routerLink]="['/non-secure/feature-list']">Features</a>
+                    <a class="nav-link" id="nav_featureList" [routerLink]="['/non-secure/how-to-use']">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="nav_fieldInfo" [routerLink]="['/non-secure/field-info']">Field Info</a>
