--- a/src/app/non-secure/contact-us/contact-us.component.html
+++ b/src/app/non-secure/contact-us/contact-us.component.html
@@ -10,8 +10,8 @@
         <div class="contact-detail-box">
           <i class="fa fa-th fa-3x text-colored"></i>
           <h4>Phone/Email</h4>
-          <a title="Phone">P:</a> (123) 456-7890<br>
-          E: <a href="mailto:skirmesh.net@gmail.com" class="text-muted">skirmesh.net@gmail.com</a>
+          <!-- <a title="Phone">P:</a> (123) 456-7890<br> -->
+          <a href="mailto:skirmesh.net@gmail.com" class="text-muted">skirmesh.net@gmail.com</a>
         </div>
       </div><!-- end col -->
 
@@ -44,13 +44,13 @@
     <div class="row" style="padding-top: 30px;">
       <div class="col-sm-6">
         <div class="contact-map">
-          <iframe src="https://www.google.com/maps/embed/v1/place?q=New+York+University&amp;key=AIzaSyD4h-WYczU9DBnRPHAz5lUCo88C9IZrM7k" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="width: 100%; height: 360px;"></iframe>
+          <iframe src="https://www.google.com/maps/embed/v1/place?q=Chesapeake+VA&amp;key=AIzaSyD4h-WYczU9DBnRPHAz5lUCo88C9IZrM7k" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="width: 100%; height: 360px;"></iframe>
         </div>
       </div><!-- end col -->
 
       <!-- Contact form -->
       <div class="col-sm-6">
-        <form role="form" name="ajax-form" id="ajax-form" action="https://formsubmit.io/send/bharath.ram89@gmail.com" method="post" class="cust_skirmesh_board form-main">
+        <form role="form" name="ajax-form" id="ajax-form" action="https://formsubmit.io/send/skirmesh.net@gmail.com" method="post" class="cust_skirmesh_board form-main">
             <p class="text-center center-cust">Message us here </p>
           <div class="form-group">
             <label for="name2">Name</label>
