cleaup contact us page

--- a/src/app/non-secure/contact-us/contact-us.component.html
+++ b/src/app/non-secure/contact-us/contact-us.component.html
@@ -31,9 +31,9 @@
       <div class="col-sm-4">
         <div class="contact-detail-box">
           <i class="fa fa-book fa-3x text-colored"></i>
-          <h4>24x7 Support</h4>
+          <h4>  Talented Support Team </h4>
 
-          <p>SLA of less than 48hrs</p>
+          <p> Quick resolution. </p>
         </div>
       </div><!-- end col -->
 
