--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -4,57 +4,46 @@
 
     <div class="p-4 text-center text-white text-lg bg-dark rounded-top"><span class="text-uppercase"> Players </span>
 
-    <div class="card-body">
-      <div class="steps d-flex flex-wrap flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
-        <div class="step completed">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-cart"></i></div>
+      <div class="card-body">
+        <div class="steps d-flex flex-wrap flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
+          <div class="step ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-user-plus"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Register </h4>
           </div>
-          <h4 class="step-title"> Register </h4>
-        </div>
-        <div class="step completed">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-config"></i></div>
+          <div class="step ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-thumbs-o-up"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Purchase a wristband </h4>
           </div>
-          <h4 class="step-title"> Purchase a wristband </h4>
-        </div>
-        <div class="step ">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-medal"></i></div>
+          <div class="step ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-connectdevelop fa-spin fa-fw"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Get connected </h4>
           </div>
-          <h4 class="step-title"> Get connected </h4>
-        </div>
-        <div class="step">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-car"></i></div>
+          <div class="step">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-rebel "></i></div>
+            </div>
+            <h4 class="step-title text-white"> Play </h4>
           </div>
-          <h4 class="step-title"> Play </h4>
-        </div>
-        <div class="step">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-home"></i></div>
+          <div class="step">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-share"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Share </h4>
           </div>
-          <h4 class="step-title"> Share </h4>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
-    <div class="custom-control custom-checkbox mr-3">
-      <input class="custom-control-input" type="checkbox" id="notify_me" checked="">
-      <label class="custom-control-label" for="notify_me">Notify me when order is delivered</label>
-    </div>
-    <div class="text-left text-sm-right"><a class="btn btn-outline-primary btn-rounded btn-sm" href="orderDetails" data-toggle="modal" data-target="#orderDetails">View Order Details</a></div>
-  </div> -->
-
-</div>
-
-
-<div class="row center-cust">
-    <div class="card col-4">
+    <div class="row center-cust">
+      <div class=" col-12">
         <div class="card-header no-border">
-            <h5 class="card-title">Players</h5>
+          <h5 class="card-title">Players</h5>
         </div>
         <div class="card-body pt-0">
 
@@ -67,69 +56,82 @@
           </ol>
 
         </div>
-    </div>
-    <div class="card col-4">
-        <div class="card-header no-border">
-            <h5 class="card-title">Fields</h5>
-        </div>
-        <div class="card-body pt-0">
-          <ol type="1">
-            <li> Reach out to us for setup. </li>
-            <li> Configure Games. </li>
-            <li> Start Games. </li>
-            <li> Promote live games. </li>
-            <li> View and share stats. </li>
-          </ol>
-        </div>
-    </div>
-</div>
-
-
-<div class="container padding-bottom-3x mb-1">
-  <div class="card mb-3">
-    <div class="p-4 text-center text-white text-lg bg-dark rounded-top"><span class="text-uppercase"> Fields </span>
-
-    <div class="card-body">
-      <div class="steps d-flex flex-wrap flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
-        <div class="step completed">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-cart"></i></div>
-          </div>
-          <h4 class="step-title"> Get setup </h4>
-        </div>
-        <div class="step completed">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-config"></i></div>
-          </div>
-          <h4 class="step-title"> Configure Games </h4>
-        </div>
-        <div class="step completed">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-medal"></i></div>
-          </div>
-          <h4 class="step-title"> Play </h4>
-        </div>
-        <div class="step">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-car"></i></div>
-          </div>
-          <h4 class="step-title"> Promote </h4>
-        </div>
-        <div class="step">
-          <div class="step-icon-wrap">
-            <div class="step-icon"><i class="pe-7s-home"></i></div>
-          </div>
-          <h4 class="step-title"> Share </h4>
-        </div>
       </div>
     </div>
-  </div>
-  
-  <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
+    <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
     <div class="custom-control custom-checkbox mr-3">
       <input class="custom-control-input" type="checkbox" id="notify_me" checked="">
       <label class="custom-control-label" for="notify_me">Notify me when order is delivered</label>
     </div>
     <div class="text-left text-sm-right"><a class="btn btn-outline-primary btn-rounded btn-sm" href="orderDetails" data-toggle="modal" data-target="#orderDetails">View Order Details</a></div>
   </div> -->
-</div>
+
+  </div>
+
+
+
+  <div class="card mb-3">
+    <div class="p-4 text-center text-white text-lg bg-dark rounded-top"><span class="text-uppercase"> Fields </span>
+
+      <div class="card-body">
+        <div class="steps d-flex flex-wrap flex-sm-nowrap justify-content-between padding-top-2x padding-bottom-1x">
+          <div class="step  ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-wrench"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Get setup </h4>
+          </div>
+          <div class="step  ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-cogs"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Configure Games </h4>
+          </div>
+          <div class="step  ">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-rebel"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Play </h4>
+          </div>
+          <div class="step">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-bullhorn"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Promote </h4>
+          </div>
+          <div class="step">
+            <div class="step-icon-wrap">
+              <div class="step-icon"><i class="fa fa-share"></i></div>
+            </div>
+            <h4 class="step-title text-white"> Share </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row center-cust">
+      <div class=" col-12">
+        <div class="card-header no-border">
+          <h5 class="card-title">Players</h5>
+        </div>
+        <div class="card-body pt-0">
+
+          <ol type="1">
+            <li> Register a profile. </li>
+            <li> Buy an approved wristband. </li>
+            <li> Connect your wristband. </li>
+            <li> Play at equipped fields. </li>
+            <li> View and share stats. </li>
+          </ol>
+
+        </div>
+      </div>
+    </div>
+    <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
+    <div class="custom-control custom-checkbox mr-3">
+      <input class="custom-control-input" type="checkbox" id="notify_me" checked="">
+      <label class="custom-control-label" for="notify_me">Notify me when order is delivered</label>
+    </div>
+    <div class="text-left text-sm-right"><a class="btn btn-outline-primary btn-rounded btn-sm" href="orderDetails" data-toggle="modal" data-target="#orderDetails">View Order Details</a></div>
+  </div> -->
+  </div>
+  </div>
