fix the field bullets

--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="row center-cust">
-      <div class=" col-12">
+      <!-- <div class=" col-12">
         <div class="card-header no-border">
           <h5 class="card-title">Players</h5>
-        </div>
+        </div> -->
         <div class="card-body pt-0">
 
           <ol type="1">
@@ -91,7 +91,7 @@
             <div class="step-icon-wrap">
               <div class="step-icon"><i class="fa fa-rebel"></i></div>
             </div>
-            <h4 class="step-title text-white"> Play </h4>
+            <h4 class="step-title text-white"> Host </h4>
           </div>
           <div class="step">
             <div class="step-icon-wrap">
@@ -110,17 +110,17 @@
     </div>
     <div class="row center-cust">
       <div class=" col-12">
-        <div class="card-header no-border">
+        <!-- <div class="card-header no-border">
           <h5 class="card-title">Players</h5>
-        </div>
+        </div> -->
         <div class="card-body pt-0">
 
           <ol type="1">
-            <li> Register a profile. </li>
-            <li> Buy an approved wristband. </li>
-            <li> Connect your wristband. </li>
-            <li> Play at equipped fields. </li>
-            <li> View and share stats. </li>
+            <li> Contact us for Setup. </li>
+            <li> Create Game Configurations. </li>
+            <li> Host Exciting Games. </li>
+            <li> Promote your Field. </li>
+            <li> Share. </li>
           </ol>
 
         </div>
