Disable "start game" until a config is selected and cleanup how to page

--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -45,7 +45,7 @@
         <div class="card-header no-border">
           <h5 class="card-title">Players</h5>
         </div> -->
-        <div class="card-body pt-0">
+        <!-- <div class="card-body pt-0">
 
           <ol type="1">
             <li> Register a profile. </li>
@@ -55,7 +55,7 @@
             <li> View and share stats. </li>
           </ol>
 
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
@@ -91,7 +91,7 @@
             <div class="step-icon-wrap">
               <div class="step-icon"><i class="fa fa-rebel"></i></div>
             </div>
-            <h4 class="step-title text-white"> Host </h4>
+            <h4 class="step-title text-white"> Play </h4>
           </div>
           <div class="step">
             <div class="step-icon-wrap">
@@ -99,20 +99,20 @@
             </div>
             <h4 class="step-title text-white"> Promote </h4>
           </div>
-          <div class="step">
+          <!-- <div class="step">
             <div class="step-icon-wrap">
               <div class="step-icon"><i class="fa fa-share"></i></div>
             </div>
             <h4 class="step-title text-white"> Share </h4>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
-    <div class="row center-cust">
+    <!-- <div class="row center-cust">
       <div class=" col-12">
-        <!-- <div class="card-header no-border">
+        <div class="card-header no-border">
           <h5 class="card-title">Players</h5>
-        </div> -->
+        </div>
         <div class="card-body pt-0">
 
           <ol type="1">
@@ -125,13 +125,13 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="d-flex flex-wrap flex-md-nowrap justify-content-center justify-content-sm-between align-items-center">
     <div class="custom-control custom-checkbox mr-3">
       <input class="custom-control-input" type="checkbox" id="notify_me" checked="">
       <label class="custom-control-label" for="notify_me">Notify me when order is delivered</label>
     </div>
     <div class="text-left text-sm-right"><a class="btn btn-outline-primary btn-rounded btn-sm" href="orderDetails" data-toggle="modal" data-target="#orderDetails">View Order Details</a></div>
-  </div> -->
   </div>
+  </div> -->
   </div>
