--- a/src/app/non-secure/how-to-use/how-to-use.component.html
+++ b/src/app/non-secure/how-to-use/how-to-use.component.html
@@ -1,4 +1,4 @@
-<div class="container padding-bottom-3x mb-1">
+<div class="container mb-1">
 
   <div class="card mb-3">
 
@@ -66,11 +66,9 @@
     <div class="text-left text-sm-right"><a class="btn btn-outline-primary btn-rounded btn-sm" href="orderDetails" data-toggle="modal" data-target="#orderDetails">View Order Details</a></div>
   </div> -->
 
-  </div>
 
 
-
-  <div class="card mb-3">
+  <div class="card mb-1">
     <div class="p-4 text-center text-white text-lg bg-dark rounded-top"><span class="text-uppercase"> Fields </span>
 
       <div class="card-body">
@@ -135,3 +133,7 @@
   </div>
   </div> -->
   </div>
+
+
+
+</div>
