disable save button on edit games unless map is selected

--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -41,7 +41,7 @@
     <app-device-list  [config]="deviceListConfigs" (nodeConfigs)="nodeConfigs($event)"></app-device-list>
   </div>
   <br />
-  <button type="submit" [disabled]="" class="btn btn-primary">Save</button>
+  <button type="submit" [disabled]="!isMapSelected" class="btn btn-primary">Save</button>
 
 
 </form>
