--- a/src/app/non-secure/mydevices/mydevices.component.scss
+++ b/src/app/non-secure/mydevices/mydevices.component.scss
@@ -21,15 +21,15 @@ div.view-btn {
 }
 
 .card{
-    // @media  (max-width: 500px) {
-    //     width: 33%;
-    // }
-    @media  (min-width: 700px) {
-        width: 50%;
+
+    @media  (max-width: 500px) {
+        width: 90%;
     }
-    @media  (min-width: 901px) {
-        width: 33%
+    @media  (max-width: 800px) {
+        width: 45%;
     }
+
+    width: 30%;
     margin: 1rem;
     display: inline-block;
 }
