cleanup field info

--- a/src/app/non-secure/field-info/field-info.component.html
+++ b/src/app/non-secure/field-info/field-info.component.html
@@ -1,6 +1,6 @@
 <div class="custom_skirmesh">
     <div class="cust_skirmesh_board">
-        <h3>Take Airsoft and Paintball into the Future</h3>
+        <h3>Airsoft. Paintball. MILSIM. Connected. </h3>
         <!-- <h4>Turn your Airsoft Field into a video game</h4> -->
     </div>
     <div class="container">
@@ -51,7 +51,7 @@
 
                                 Our proprietary rule set ensures fair gameplay and accountable action for every player.
 
-                                Skirmesh is an expandable system with deployable objectives(nodes). Each can serve a
+                                Skirmesh is an expandable system with deployable objectives(devices). Each can serve a
                                 variety of functions and can be configured to create diabolic scenarios that challenge
                                 tactics and teamwork of the most skilled players. Control the “worth” of an objective in
                                 an assault to steer the fight or allow teams to capture or destroy entire objectives to
@@ -82,15 +82,19 @@
                             <a href="#">New Customer Engagement Channels</a>
                         </h4>
                         <p class="blog-card-description">Personalized player profiles linked to unique RFID bracelets
-                            give you and your customers new insight into Airsoft gameplay. <span
-                                id="dots-tab3">...</span><span id="more-tab3">Players are able to review objectives
-                                captured, breach assists, and how frequently they play.
+                            give you and your customers new insight into gameplay.
+                            <span id="dots-tab3">...</span>
 
-                                As we continue to develop the system, we will provide more detail and coverage of stats
-                                and actions.
+                            <span id="more-tab3">Players are able to review objectives
+                                captured, breach assists, medic events, and how frequently they play.
 
-                                Fields can better understand customer acquisition as we can identify unique and
-                                repeat customers to provide a broad based customer value datastream.</span></p>
+                                <p>As we continue to develop the system, we will provide more detail and coverage of stats
+                                and actions.</p>
+
+                                <p>Fields can better understand customer acquisition as we can identify unique and
+                                repeat customers to provide a broad based customer value datastream.</p>
+                            </span>
+                        </p>
                         <div class="ftr">
                             <div class="author">
                                 <button id="btn-tab3" class="btn btn-outline-success" (click)="tab3LearnMore()">Learn More </button>
