breakup scentences on Pair RFID.

--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -196,9 +196,10 @@
               <form [formGroup]="uidEntry" autocomplete="off" method="POST">
 
                 <div class="col-6">
-                  <h3 class="center-cust">Look for the RFID on the reverse of your band.
-                                          Type it in exactly as shown on the band to associate
-                                          the band to your profile. </h3>
+                  <h3 class="center-cust">
+                      <p>Look for the RFID on the reverse of your band.</p>
+                      <p>Type it in exactly as shown on the band to associate the band to your profile. </p>
+                  </h3>
                   <div class="form-group">
                     <input formControlName="uid" class="form-control" placeholder="RFID">
                   </div>
