center fix for profile tabs and dashboard image size fix

--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -274,7 +274,7 @@
           <h2 class="title center-cust">Manage Security</h2>
 
           <div class="custom_skirmesh">
-            <div class="row justify-content-md-center">
+            <div class="row center-cust justify-content-md-center">
               <!-- <div class="col-8"> -->
 
                   <accordion>
